<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_btn_menu"
            android:title="@string/main_btn_menu"
            android:icon="@drawable/house"/>
        <item
            android:id="@+id/appl_btn_menu"
            android:title="@string/appl_btn_menu"
            android:icon="@drawable/appl_note"/>
        <item
            android:id="@+id/account_btn_menu"
            android:title="@string/account_btn_menu"
            android:icon="@drawable/account"/>
        <item
            android:id="@+id/settings_btn_menu"
            android:title="@string/settings_btn_menu"
            android:icon="@drawable/settings"/>
    </group>

</menu>