<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/yellow"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lastname_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/patronymic_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patronymic"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/age_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_field"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/post"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/post_spinner"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/post_spin"
                android:minHeight="48dp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>