<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/yellow"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/purpose_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appl_item_purpose"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/address_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_field"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/date_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appl_item_date"
            android:minHeight="48dp"
            android:inputType="date"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/start_time_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/start_time_field"
            android:minHeight="48dp"
            android:inputType="time"
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/finish_time_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/finish_time_field"
            android:inputType="time"
            android:minHeight="48dp"
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/comment_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_field"
            android:minHeight="48dp"
            android:text=""
            android:textColor="@color/black1"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>