<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/card"
    app:cardElevation="10dp">

    <RadioGroup
        android:id="@+id/not_approve_radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:checkedButton="@id/first_reason">

        <RadioButton
            android:id="@+id/first_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/first_reason"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:buttonTint="@color/yellow" />

        <RadioButton
            android:id="@+id/second_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/second_reason"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:buttonTint="@color/yellow"/>

        <RadioButton
            android:id="@+id/third_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/third_reason"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:buttonTint="@color/yellow"/>

        <RadioButton
            android:id="@+id/fourth_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:text="@string/fourth_reason"
            android:fontFamily="@font/inter"
            android:textSize="16sp"
            android:buttonTint="@color/yellow"/>


    </RadioGroup>
</androidx.cardview.widget.CardView>