<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".driverFragment.ApplicationDriverFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/my_timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_timetable"
        android:textSize="30sp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black1"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sortRecycler"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_below="@+id/my_timetable"
        android:layout_marginStart="2dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="2dp" />

    <LinearLayout
        android:id="@+id/driver_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/sortRecycler">

        <TextView
            android:id="@+id/new_appl_drver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="30dp"
            android:text="@string/new_appl_drver"
            android:textSize="17sp"
            android:fontFamily="@font/anton"
            android:textColor="@color/black1"
            />

        <TextView
            android:id="@+id/conf_appl_drver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="25dp"
            android:text="@string/conf_appl_drver"
            android:textSize="17sp"
            android:fontFamily="@font/anton"
            android:textColor="@color/black1"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/r_view"
        android:layout_width="409dp"
        android:layout_height="650dp"
        android:layout_marginTop="7dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_below="@+id/driver_linear"
        android:background="@color/white"
        android:layout_marginBottom="5dp" />

    <TextView
        android:id="@+id/text_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_no"
        android:textSize="20sp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black1" />



</RelativeLayout>