<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workerFragment.HomeWorkerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SearchView
            android:id="@+id/home_search"
            android:layout_width="360dp"
            android:layout_height="44dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@color/input_field"
            android:queryHint="@string/search_view"
            android:iconifiedByDefault="false" />

        <ImageView
            android:id="@+id/home_bg"
            android:layout_width="350dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/home_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/home_search"/>

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textSize="25sp"
            android:fontFamily="@font/anton"
            android:textColor="@color/black1"

            android:layout_below="@+id/home_bg"/>

        <LinearLayout
            android:id="@+id/home_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/welcome_text">

            <TextView
                android:id="@+id/sort_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="30dp"
                android:text="@string/news"
                android:textSize="17sp"
                android:fontFamily="@font/anton"
                android:textColor="@color/black1"
                />

            <TextView
                android:id="@+id/sort_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="25dp"
                android:text="@string/offers"
                android:textSize="17sp"
                android:fontFamily="@font/anton"
                android:textColor="@color/black1"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_recycler"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@id/home_linear"/>

    </RelativeLayout>

</ScrollView>